Fixed #5793: fixed the alignment in search-in-workspace result node
- Fixed the alignment in the search-in-workspace result node. The `close` icon now is properly aligned with the notification count number icon.

--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -314,7 +314,8 @@
 .result-node-buttons > span {
     width: 15px;
     height: 15px;
-    margin-right: 3px;
+    margin-left: 2.5px;
+    margin-right: 0.5px;
     background-repeat:  no-repeat;
     background-position: center;
     background-size: contain;
